--- a/server/package.json
+++ b/server/package.json
@@ -4,11 +4,11 @@
   "description": "Diamond project MERN",
   "main": "index.js",
   "scripts": {
-    "client-install":"npm install --prefix client",
+    "client-install": "npm install --prefix client",
     "start": "node server.js",
-    "server" : "nodemon server.js",
-    "client":"npm start --prefix client",
-    "dev" :"concurrently \"npm run server\" \"npm run client\""
+    "server": "nodemon server.js",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "repository": {
     "type": "git",
@@ -24,7 +24,9 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "concurrently": "^5.3.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "mongodb": "^3.6.3",
     "mongoose": "^5.11.9"
   },
   "devDependencies": {
