--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,10 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
     "material-table": "^1.69.2",
+    "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "reactstrap": "^8.8.1",
     "web-vitals": "^0.2.4"
@@ -23,7 +25,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-
   "eslintConfig": {
     "extends": [
       "react-app",
